--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
             <img src="other/20.avif" alt="MineIsland" class="game-image">
             <a href="mineisland/index.html" class="play-button"></a>
         </div>
+        <div class="game-card">
+            <img src="other/aviamast.webp" alt="AviaMasters" class="game-image">
+            <a href="aviamastindex.html" class="play-button"></a>
+        </div>
+        <div class="game-card">
+            <img src="other/thi.png" alt="KingThimbles" class="game-image">
+            <a href="king/index.html" class="play-button"></a>
+        </div>
     </div>
 
     <script src="script.js"></script>
