--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="game-card">
             <img src="other/aviamast.webp" alt="AviaMasters" class="game-image">
-            <a href="aviamastindex.html" class="play-button"></a>
+            <a href="aviamast/index.html" class="play-button"></a>
         </div>
         <div class="game-card">
             <img src="other/thi.png" alt="KingThimbles" class="game-image">
